# RUST_AXUM_STUDY

./: Cargo.toml  Dockerfile  Jenkinsfile  README.md
migrations/: create_users_table.sql
src/: main.rs
src/auth/: auth.rs
src/db/: db_pool.rs
src/routes/: auth.rs  hello.rs  mod.rs
