[package]
name = "axum_study"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
bcrypt = "0.15"
jsonwebtoken = "9"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
